<resources>
    <string name="app_name">Furriends</string>
    <string name="OpenDrawer">Open navigation Drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_account_login_here">Already Account ? Login Here</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="here">Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="resert_password">Resert Password</string>
    <string name="new_account_sign_up_here">New Account ? Sign Up Here</string>
    <string name="profile">Profile</string>
    <string name="notification">notification</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="others">others</string>
    <string name="logout">Logout</string>
    <string name="name">name</string>
    <string name="save_button_text">save_button_text</string>
    <string name="title_activity_location">Location</string>
    <string name="hospital_icon_description">Hospital icon</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA3h1UNIMxAZLW3fOnNxTzbMzPDOOFGa0w</string>
    <string name="hospital">Hospital</string>
    <string name="ngo">NGO</string>
    <string name="atm">ATM</string>
    <string name="google_map_key">AIzaSyA3h1UNIMxAZLW3fOnNxTzbMzPDOOFGa0w</string>
    <string name="google_key">"AIzaSyA3h1UNIMxAZLW3fOnNxTzbMzPDOOFGa0w "</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
</resources>